--- a/styles/AESh.sty
+++ b/styles/AESh.sty
@@ -151,3 +151,4 @@
 \newcommand{\tmY}[2][1]{\prod\limits_{#2=#1}^{\infty}} % аналог \rY
 \newcommand{\TMY}[3]{\prod\limits_{#1=#2}^{#3}}		% аналог \RY
 
+\input{AESh1.sty}
