--- a/complan.tex
+++ b/complan.tex
@@ -1,10 +1,13 @@
 \documentclass[a4paper,10pt]{article}
 \input{styles/AESh.sty}
+\input{styles/AESh1.sty}
 \input{styles/coana.sty}
 \begin{document}
-\input{them/program.tex}
-\newpage
+
 \tableofcontents
+\newpage
+\input{them/program.tex}
+
 \input{them/help.tex}
 \input{them/1.tex}
 \input{them/2.tex}
