--- a/them/1.tex
+++ b/them/1.tex
@@ -18,7 +18,7 @@ $\GG = \{\g \} $ "--- класс эквивалентности КГ-путей 
 
 
 \begin{Def} 
-\underline{Допустимая кривая} "--- жарданова КГ-кривая в $\C$ (взаимооднозначная) либо замкнутая-жордановая.
+\underline{Допустимая кривая} "--- жарданова КГ-кривая в $\C$ (взаимооднозначная) либо замкнутая-жорданова.
 \end{Def}
 
 Теперь давайте определим интеграл в смысле главного значения. 
@@ -40,6 +40,19 @@ $I$ "--- называется \underline{интегралом в смысле г
 \]
 \end{Def}
 
+\begin{Zam}[от Белошапки]
+Важно отметить, чем принципиально отличается интеграл в смысле главного значения от обычного интеграла.  Рассмотрим интеграл $\int\limits_{a}^{b} f(x) dx$  над вещественной прямой.\\ Пусть он имеет единственную особенность в точке $c \in [a,b]$. Тогда
+\[
+\int\limits_{a}^{b} f(x) dx = \lim\limits_{\d_1 \to 0} \lim\limits_{\d_2 \to 0}\left( \int\limits_{a}^{c-\d_1} f(x) dx + \int\limits_{c+\d_2}^{b} f(x) dx \right) .
+\] 
+Такой интеграл называется несобственным с особенностью в точке $c$. Однако интеграл в смысле главного значения определяется следующим образом
+\[
+(vp)\int\limits_{a}^{b} f(x) dx = \lim\limits_{\d \to 0}\left( \int\limits_{a}^{c-\d} f(x) dx + \int\limits_{c+\d}^{b} f(x) dx \right).
+\]
+
+Таким образом интеграл в смысле главного значения отличается от несобственного интеграла тем, что в случае главного значения приближаемся к особенности согласованно с обеех сторон. В свою очередь для несобственного интеграла сходимости справа и слева независимы друг от друга.
+\end{Zam}
+
 
 \subsection{Вычет относительно области.}
 Пусть $D$ "--- допустимая область в $\ol\C$ ранга $s \ge 1$. \\
@@ -57,3 +70,56 @@ $I$ "--- называется \underline{интегралом в смысле г
 \res\limits_{a,D} f(z) := \lim\limits_{\d \to 0} \frac{1}{2\pi i} \Gint{\g_{\d}^{'}(a)}f(z)dz.
 \] 
 \end{Def}
+
+
+\subsection{Вычисление вычета относительно области.}
+Положим $D$ "--- допустимая область в $\C$. Для вычисления вычетов относительно области используем следующие предложения
+
+\begin{Pre}
+Пусть $a \in D$ и $f \in A(U'(a))$ (проколотая окрестность), тогда $\res\limits_{a, D}f(z) = \res\limits_{a}f(z).$
+\end{Pre}
+\begin{proof}
+Очевидно.
+\end{proof}
+
+\begin{Pre}
+Пусть $a \in \C$ и $f(z) = \ol{\ol{o}}(\frac{1}{z-a})$ или $a =\infty$ и при $z \to \infty$ $(z \in D)\colon$  $f(z) = \ol{\ol{o}}(\frac{1}{z}) $, \\тогда $\res\limits_{a, D}f(z) = 0.$
+\end{Pre}
+\begin{proof}
+\begin{enumerate}
+\item Случай $a \not= \infty$. 
+$\left|  \Gint{\gamma_{\d}^{+}} f(z)dz \right| \le \ol{\ol{o}}(\frac{1}{\d}) \cdot 2\pi\d \Dte 0$, где $\d = |z - a|$.
+\item Случай $a = \infty$. ?
+\end{enumerate}
+\end{proof}
+
+
+\begin{Pre}
+Пусть $a \in \partial D$ "--- полюс первого порядка для функции $f$, $a \not= \infty$, $\Theta_a$ "--- абсолютная величина внутреннего угла области $D$ с вершиной $a$. Тогда
+\[
+\res\limits_{a, D}f(z) = \frac{\Theta_a}{2\pi}\res\limits_{a}f(z).
+\]
+\end{Pre}
+\begin{proof} При достаточно малом $\d$ положим $\gamma_{\d}^{+}(a) =\partial^{+}B(a,\d) \cap \ol{D}$ "--- связная дуга $\d$-окрестности точки~a. Рассмотрим параметризацию данной кривой $\gamma_{\d}^{+}(a) \colon z = z(t) = a\d e^{it}$, $\dot z(t) = a\d i  e^{it}$,  при $t \in [\a(\d),\b(\d)]$, причем~$\a(\d)<\b(\d)<\a(\d)+2\pi$.
+Положим
+\[
+\Theta_a = \lim\limits_{\d \to 0} (\b(\d) - \a(\d) ).
+\]
+Разложим $f$ в проколотой окрестности точки $a$ в ряд Лорана при $0 < |z-a| <\d_a >0 \colon$
+\[
+f(z) = \frac{C_{-1}}{z-a} + C_0 + \dots
+\]
+Тогда вычет в точке $a$ относительно области $D$ принимает вид
+ \[
+ \res\limits_{a,D} = \frac{1}{2 \pi i} \Gint{\gamma_{\d}^{+}} f(z)dz = \frac{1}{2\pi i} \lim\limits_{\d \to 0} \int\limits_{\a(\d)}^{\b(\d)} \left(\frac{C_{-1}}{\d e^{it}} + \ol{\ol{o}}(1)\right)\d ie^{it}dt = \frac{C_{-1}}{2\pi}\lim\limits_{\d \to 0} \left(\a(\d) - \b(\d)\right) = C_{-1}\frac{\Theta_a}{2\pi}
+ \]
+ $C_{-1}$ "--- и есть необходимый вычет.
+
+\end{proof}
+
+\begin{Pre}[Лемма Жордана] 
+Пусть $f \in C(\Pi_R)$, где $\Pi_R = \{z \in \C |\Im{z} \ge 0,  |z| > R\}$, и для $z \in \Pi_R\colon$ $\lim\limits_{z \to \infty} f(z) = 0$, тогда для любого фиксированного $\l > 0$ выполняется соотношение 
+\[
+\res\limits_{\infty, D}(f(z)e^{i \l z}) = 0.
+\] (подробнее смотри билет 2)
+\end{Pre}
