--- a/them/3.tex
+++ b/them/3.tex
@@ -7,7 +7,7 @@ $\A$ "--- конечное множество, $f \in A(D\diagdown\A)\cap C(\ol{
 \[
 (vp)\Gint{\partial^{+}D}f(z)dz = 2\pi i \sum\limits_{n=1}^N \res\limits_{a_n , D} f(z).
 \]
-То есть интеграл в смысле главного значения существует, если и только если выечеты в каждой точке из $\A$ относительно области $D$ существуют. В таком случае данное равенство выполняется.
+То есть интеграл в смысле главного значения существует, если и только если выечеты в каждой точке из~$\A$ относительно области $D$ существуют. В таком случае данное равенство выполняется.
 \end{The}
 
 \begin{Proof}
