--- a/them/4.tex
+++ b/them/4.tex
@@ -1,4 +1,25 @@
 \newpage
 \section{Примеры вычисления интегралов. Преобразования Фурье и Гильберта.}
+Для вычисления интгралов в смысле главного значения в первую очередь мы будем использовать теорему~о~вычетах а так же предложения (1.1) --- (1.4).
 
-Очень важно помнить, что интеграл в смысле главного значения отличается от обычного интеграла тем, что
+\begin{enumerate} 
+\item $f(z) = \frac{\ln{z}}{z^2-1}$
+\item Вспомним замечание (1.1).
+Рассмотрим $f(z) = \frac{1}{z}$ обычный несобственный интеграл от $-\infty$ до $+\infty$
+\[
+\int\limits_{-\infty}^{+\infty} \frac{1}{z}dz \text{"--- расходится}
+\]
+Однако, интеграл в смысле главного значения сходится и
+\[
+(vp)\int\limits_{-\infty}^{+\infty} \frac{1}{z}dz = 0
+\]
+\item Преобразование Фурье
+\[
+  \hat f(x) :=\frac{1}{\sqrt{2 \pi}}(vp)\Gint{\R}f(y)\,e^{ixy}dy;\qquad
+  \Til f(x) :=\frac{1}{\sqrt{2 \pi}}(vp)\Gint{\R}f(y)\,e^{ixy}dy.
+\]
+\item Преобразование Гильберта
+\[
+f \to H [f](x) = \frac{1}{\pi}(vp)\Gint{\R}\frac{f(x)}{x-t}dt
+\]
+\end{enumerate}
