--- a/them/program.tex
+++ b/them/program.tex
@@ -1,6 +1,6 @@
 
-  Программа курса «Комплексный анализ», часть II,
-  3 поток, механики (6 сем., 2014/2015 уч. год).
+ \subsection{Программа курса} 
+ Программа курса «Комплексный анализ», часть II, 3 поток, механики (6 сем., 2014/2015 уч. год).
 \begin{enumerate}
 \item   Интеграл в смысле главного значения. Вычет относительно области и его   
       вычисление. 
