--- a/styles/coana.sty
+++ b/styles/coana.sty
@@ -154,3 +154,4 @@
 
 \def\res{\mathop{\rm res}\limits}
 \newcommand{\Rte}[1][]{\xrightarrow[R\to+\infty]{#1}}
+\newcommand{\Dte}[1][]{\xrightarrow[\d\to 0]{#1}}
