--- a/them/1.tex
+++ b/them/1.tex
@@ -36,7 +36,8 @@ $\GG = \{\g \} $ "--- класс эквивалентности КГ-путей 
 $I$ "--- называется \underline{интегралом в смысле главного значения}, если
 % для любого $\e > 0$ \\существует $\d > 0\colon$ $|\D| < \d$ и $|I - \Gint{\GG_{A\D}} f(z)dz| < \e$.
 \[
-\text{ для } \forall \e >0 \text{ } \exists \d > 0  \colon |\D| < \d \text{ и } \left|I - \Gint{\GG_{A\D}} f(z)dz\right| < \e.
+\text{ для } \forall \e >0 \  % пробел, который генегируется с помощью «\text{ }», можно поставить используя два символа: «\ »
+\exists \d > 0  \colon |\D| < \d \text{ и } \bigg|I - \Gint{\GG_{A\D}} f(z)dz\bigg| < \e. % В случае интегралов и сумм размер скобок лучше подбирать руками
 \]
 \end{Def}
 
