--- a/styles/coana.sty
+++ b/styles/coana.sty
@@ -152,6 +152,9 @@
 
 
 
+\def\arg{\mathop{\rm arg}\limits}
+\def\log{\mathop{\rm log}\limits}
+\def\Lres{\mathop{\rm Lres}\limits}
 \def\res{\mathop{\rm res}\limits}
 \newcommand{\Rte}[1][]{\xrightarrow[R\to+\infty]{#1}}
 \newcommand{\Dte}[1][]{\xrightarrow[\d\to 0]{#1}}
