--- a/them/3.tex
+++ b/them/3.tex
@@ -20,6 +20,6 @@ $\A$ "--- конечное множество, $f \in A(D\diagdown\A)\cap C(\ol{
  Значит, $\partial^{+} D_{\A\D} = \GG_{\A'\D'} \cap \bigsqcup\limits_{j=1}^N \g_{\d_j}^{-}(a_j)$.\\
  Тогда по интегральной теореме Коши:
  \[
-0 = \Gint{\partial^{+} D_{\A\D}} f(z)dz =\underbrace{\Gint{\GG_{\A'\D'}} f(z)dz}_{(vp)\Gint{\partial^{+} D} f(z)dz} - \sum\limits_{j=1}^{N} \underbrace{\Gint{\g_{\d_j}^{+}(a_j)} f(z)dz}_{2\pi i\res\limits_{a_j,D} f(z) }.
+0 = \Gint{\partial^{+} D_{\A\D}} f(z)dz =\underbrace{\Gint{\GG_{\A'\D'}} f(z)dz}_{(vp)\Gint{\partial^{+} D} f(z)dz \text{(при $|\D| \to 0$)} } - \sum\limits_{j=1}^{N} \underbrace{\Gint{\g_{\d_j}^{+}(a_j)} f(z)dz}_{2\pi i\res\limits_{a_j,D} f(z) \text{(при $|\D| \to 0$)}}.
  \]
 \end{Proof}
